--- a/lavis/projects/blip2/train/retrieval_coco_ft.yaml
+++ b/lavis/projects/blip2/train/retrieval_coco_ft.yaml
@@ -31,7 +31,8 @@ datasets:
           name: "blip_caption"
     build_info:
         images:
-            storage: '/export/share/datasets/vision/coco/images/'
+            #storage: '/export/share/datasets/vision/coco/images/'
+            storage: '/opt/data/borghei/lavis_dataset/coco/images/'
 
 run:
   task: retrieval
